Fixed FB buttons to show below profile info

--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -38,12 +38,6 @@
               <dd> <p class="quote" ng-if="myProfile.me.aboutMe"><br>{{myProfile.me.aboutMe}} </p> </dd>
             </dl>
 
-            <button class="btn btn-primary" style="background-color: #3B5998;" ng-click="loginOauth('facebook')" ng-disabled="myProfile.tempMe.facebook">
-              <i style="color: #ffffff" class="fa fa-facebook fa-lg"></i>&nbsp&nbspLink with facebook</button>
-
-            <button class="btn btn-primary" style="background-color: #3B5998;" ng-click="myProfile.unlinkAccount()" ng-disabled="!myProfile.tempMe.facebook">
-              <i style="color: #ffffff" class="fa fa-facebook fa-lg"></i>&nbsp&nbspUnlink</button>
-
           </div>
           <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
             <dl>
@@ -55,6 +49,16 @@
               <dd ng-show="myProfile.address.streetAddress">{{myProfile.address.streetAddress.city}}, {{myProfile.address.streetAddress.state}} {{myProfile.address.streetAddress.zip}} </dd>
             </dl>
           </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 col-lg-10 col-lg-offset-2">
+            <button class="btn btn-primary" style="background-color: #3B5998;" ng-click="loginOauth('facebook')" ng-disabled="myProfile.tempMe.facebook">
+              <i style="color: #ffffff" class="fa fa-facebook fa-lg"></i>&nbsp&nbspLink with facebook</button>
+
+            <button class="btn btn-primary" style="background-color: #3B5998;" ng-click="myProfile.unlinkAccount()" ng-disabled="!myProfile.tempMe.facebook">
+              <i style="color: #ffffff" class="fa fa-facebook fa-lg"></i>&nbsp&nbspUnlink</button>
+          </div>
+
         </div>
       </div>
       <div class="row">
