Added 10px margin padding for FB button

--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -50,7 +50,7 @@
             </dl>
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="margin-top: 10px">
           <div class="col-xs-12 col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 col-lg-10 col-lg-offset-2">
             <button class="btn btn-primary" style="background-color: #3B5998;" ng-click="loginOauth('facebook')" ng-disabled="myProfile.tempMe.facebook">
               <i style="color: #ffffff" class="fa fa-facebook fa-lg"></i>&nbsp&nbspLink with facebook</button>
