--- a/client/app/dashboard/my-profile/edit-profile/edit.profile.html
+++ b/client/app/dashboard/my-profile/edit-profile/edit.profile.html
@@ -35,11 +35,11 @@
             <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7">
               <div class="form-group input-post">
                 <label for="firstname">First Name</label>
-                <input class="form-control" type="text" id="firstname" name="firstname" ng-model="editProfile.tempMe.firstname"/>
+                <input class="form-control borderRadiusFix" type="text" id="firstname" name="firstname" ng-model="editProfile.tempMe.firstname" required ng-class="{'educationError': personalDataForm.firstname.$error.required && editProfile.submittedData}"/>
               </div>
               <div class="form-group input-post">
                 <label for="lastname">Last Name</label>
-                <input class="form-control" type="text" id="lastname" name="lastname" ng-model="editProfile.tempMe.lastname"/>
+                <input class="form-control borderRadiusFix" type="text" id="lastname" name="lastname" ng-model="editProfile.tempMe.lastname" required ng-class="{'educationError': personalDataForm.lastname.$error.required && editProfile.submittedData}"/>
               </div>
               <div class="form-group input-post-2">
                 <label for="aboutMe">About Me</label>
@@ -47,7 +47,7 @@
               </div>
               <div class="form-group input-post">
                 <label for="phone">Phone Number</label>
-                <input class="form-control" type="text" id="phone" name="phone" ng-model="editProfile.tempMe.phone" ui-mask="999-999-9999">
+                <input class="form-control borderRadiusFix" type="text" id="phone" name="phone" ng-model="editProfile.tempMe.phone" ui-mask="999-999-9999">
               </div>
 
               <div class="form-group input-post">
@@ -58,10 +58,9 @@
                 </select>
               </div>
 
-
             </div>
           </div>
-          <input type="submit" class="btn-rented-medium primary pull-right" value="Save">
+          <input type="submit" class="btn-rented-medium primary pull-right" value="Save" ng-disabled="personalDataForm.$pristine">
         </form>
       </div>
     </div>
@@ -91,7 +90,7 @@
             </div>
             <div class="form-group input-post">
               <label for="major">Major</label>
-              <input required type="text" ng-model="editProfile.tempEducation.major" id="major" class="form-control" name="major" ng-class="{'educationError': educationForm.major.$error.required && editProfile.submitted}"/>
+              <input required type="text" ng-model="editProfile.tempEducation.major" id="major" class="form-control borderRadiusFix" name="major" ng-class="{'educationError': educationForm.major.$error.required && editProfile.submitted}"/>
             </div>
           </div>
         </div>
@@ -101,10 +100,10 @@
             <div class="form-group input-post">
               <label for="start">Graduation date</label>
               <p class="input-group">
-                <input required type="text" id="start" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempEducation.graduationDate"
+                <input required type="text" id="start" class="form-control borderRadiusFix" datepicker-popup="{{format}}" ng-model="editProfile.tempEducation.graduationDate"
                        is-open="datePickers.EducationStartDate" name="graduation" close-text="Close" ng-class="{'educationError': educationForm.graduation.$error.required && editProfile.submitted}"/>
               <span class="input-group-btn">
-                <button type="btn-rented-medium primary" class="btn" ng-click="open($event,'EducationStartDate')"><i class="glyphicon glyphicon-calendar"></i></button>
+                <button type="btn-rented-medium primary" class="btn btn-default" ng-click="open($event,'EducationStartDate')"><i class="glyphicon glyphicon-calendar"></i></button>
               </span>
               </p>
             </div>
@@ -140,48 +139,48 @@
             <div class="form-group input-post">
 
               <label for="streetAddress">Address lookup</label>
-              <input type="text" id="streetAddress" name="streetAddress" class="form-control"  placeholder="Start entering an address to autofill" address-autocomplete="editProfile.tempAddress.streetAddress"/>
+              <input type="text" id="streetAddress" name="streetAddress" class="form-control borderRadiusFix" placeholder="Start entering an address to autofill" address-autocomplete="editProfile.tempAddress.streetAddress"/>
 
             </div>
 
             <div class="form-group input-post-readonly">
 
               <label for="streetNumber">Street Number</label>
-              <input type="number" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="editProfile.tempAddress.streetAddress.streetNumeric" readonly ng-class="{'educationError': editAddressForm.streetNumber.$error.required && editProfile.submittedAddress}" required/>
+              <input type="number" id="streetNumber" name="streetNumber" class="form-control" placeholder="Street number" ng-model="editProfile.tempAddress.streetAddress.streetNumeric" readonly ng-class="{'educationError': editAddressForm.streetNumber.$error.required && editProfile.submittedAddress}" required/>
 
             </div>
 
             <div class="form-group input-post-readonly">
 
               <label for="streetName">Street Name</label>
-              <input type="text" id="streetName" name="streetName" class="form-control"  placeholder="Street name" ng-model="editProfile.tempAddress.streetAddress.streetAddress" readonly ng-class="{'educationError': editAddressForm.streetName.$error.required && editProfile.submittedAddress}" required/>
+              <input type="text" id="streetName" name="streetName" class="form-control borderRadiusFix" placeholder="Street name" ng-model="editProfile.tempAddress.streetAddress.streetAddress" readonly ng-class="{'educationError': editAddressForm.streetName.$error.required && editProfile.submittedAddress}" required/>
 
             </div>
             <div class="form-group input-post">
 
               <label for="apt">Apt No.</label>
-              <input type="text" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="editProfile.tempAddress.streetAddress.apt"/>
+              <input type="text" id="apt" name="apt" class="form-control borderRadiusFix" placeholder="apt" ng-model="editProfile.tempAddress.streetAddress.apt"/>
 
             </div>
 
             <div class="form-group input-post-readonly">
 
               <label for="zip">Zip Code</label>
-              <input type="number" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="editProfile.tempAddress.streetAddress.zip" readonly ng-class="{'educationError': editAddressForm.zip.$error.required && editProfile.submittedAddress}" required/>
+              <input type="number" id="zip" name="zip" class="form-control" placeholder="zip code" ng-model="editProfile.tempAddress.streetAddress.zip" readonly ng-class="{'educationError': editAddressForm.zip.$error.required && editProfile.submittedAddress}" required/>
 
             </div>
 
             <div class="form-group input-post-readonly">
 
               <label for="city">City</label>
-              <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="editProfile.tempAddress.streetAddress.city" readonly ng-class="{'educationError': editAddressForm.city.$error.required && editProfile.submittedAddress}" required/>
+              <input type="text" id="city" name="city" class="form-control borderRadiusFix" placeholder="city" ng-model="editProfile.tempAddress.streetAddress.city" readonly ng-class="{'educationError': editAddressForm.city.$error.required && editProfile.submittedAddress}" required/>
 
             </div>
 
             <div class="form-group input-post-readonly">
 
               <label for="city">State</label>
-              <input type="text" id="state" name="state" class="form-control"  placeholder="state" ng-model="editProfile.tempAddress.streetAddress.state" readonly ng-class="{'educationError': editAddressForm.state.$error.required && editProfile.submittedAddress}" required/>
+              <input type="text" id="state" name="state" class="form-control borderRadiusFix"  placeholder="state" ng-model="editProfile.tempAddress.streetAddress.state" readonly ng-class="{'educationError': editAddressForm.state.$error.required && editProfile.submittedAddress}" required/>
 
             </div>
               <p ng-if="editProfile.errors" class="help-block">{{editProfile.errors}}</p>
