--- a/client/index.html
+++ b/client/index.html
@@ -42,28 +42,11 @@
   </head>
   <body>
   <div id="fb-root"></div>
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          appId      : '1482591365325802',
-          version    : 'v2.3',
-          cookie     : true
-        });
-      };
-      (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-
-    </script>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <!-- Add your site or application content here -->
-    <div ui-view=""></div>
+    <div ui-view="" autoscroll="true"></div>
     <div ng-include="'components/layout/footer/footer.html'"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -128,50 +111,6 @@
           <script src="app/account/account.routes.js"></script>
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/account/login/login.route.js"></script>
-          <script src="app/account/settings/address/add/new.address.controller.js"></script>
-          <script src="app/account/settings/address/add/new.address.route.js"></script>
-          <script src="app/account/settings/address/address.controller.js"></script>
-          <script src="app/account/settings/address/address.route.js"></script>
-          <script src="app/account/settings/address/edit/edit.addreass.route.js"></script>
-          <script src="app/account/settings/address/edit/edit.address.controller.js"></script>
-          <script src="app/account/settings/education/add/new.education.controller.js"></script>
-          <script src="app/account/settings/education/add/new.education.route.js"></script>
-          <script src="app/account/settings/education/edit/edit.education.controller.js"></script>
-          <script src="app/account/settings/education/edit/edit.education.route.js"></script>
-          <script src="app/account/settings/education/education.controller.js"></script>
-          <script src="app/account/settings/education/education.route.js"></script>
-          <script src="app/account/settings/finance/add/new.finance.controller.js"></script>
-          <script src="app/account/settings/finance/add/new.finance.route.js"></script>
-          <script src="app/account/settings/finance/edit/edit.finance.controller.js"></script>
-          <script src="app/account/settings/finance/edit/edit.finance.route.js"></script>
-          <script src="app/account/settings/finance/finance.controller.js"></script>
-          <script src="app/account/settings/finance/finance.route.js"></script>
-          <script src="app/account/settings/occupation/add/new.occupation.controller.js"></script>
-          <script src="app/account/settings/occupation/add/new.occupation.route.js"></script>
-          <script src="app/account/settings/occupation/edit/edit.occupation.controller.js"></script>
-          <script src="app/account/settings/occupation/edit/edit.occupation.route.js"></script>
-          <script src="app/account/settings/occupation/occupation.controller.js"></script>
-          <script src="app/account/settings/occupation/occupation.route.js"></script>
-          <script src="app/account/settings/password/password.controller.js"></script>
-          <script src="app/account/settings/password/password.route.js"></script>
-          <script src="app/account/settings/pets/add/new.pet.controller.js"></script>
-          <script src="app/account/settings/pets/add/new.pet.route.js"></script>
-          <script src="app/account/settings/pets/edit/edit.pet.controller.js"></script>
-          <script src="app/account/settings/pets/edit/edit.pet.route.js"></script>
-          <script src="app/account/settings/pets/pet.controller.js"></script>
-          <script src="app/account/settings/pets/pet.route.js"></script>
-          <script src="app/account/settings/settings.controller.js"></script>
-          <script src="app/account/settings/settings.route.js"></script>
-          <script src="app/account/settings/user_info/edit/edit.info.controller.js"></script>
-          <script src="app/account/settings/user_info/edit/edit.info.route.js"></script>
-          <script src="app/account/settings/user_info/user.info.controller.js"></script>
-          <script src="app/account/settings/user_info/user.info.route.js"></script>
-          <script src="app/account/settings/vehicle/add/new.vehicle.controller.js"></script>
-          <script src="app/account/settings/vehicle/add/new.vehicle.route.js"></script>
-          <script src="app/account/settings/vehicle/edit/edit.vehicle.controller.js"></script>
-          <script src="app/account/settings/vehicle/edit/edit.vehicle.route.js"></script>
-          <script src="app/account/settings/vehicle/vehicle.controller.js"></script>
-          <script src="app/account/settings/vehicle/vehicle.route.js"></script>
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
