Home page message update

--- a/client/app/landing/jumbotron.html
+++ b/client/app/landing/jumbotron.html
@@ -5,7 +5,7 @@
 
     <div class="row  text-center lead-msg">
       <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
-        <h1>An easy way to live and connect with students off-campus</h1>
+        <h1>An easy way to connect, live, and belong<br> with students off-campus</h1>
       </div>
     </div>
     <div class="row text-center lead-img">
