rework css, 4 per slide

--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -1,49 +1,33 @@
 <h2 class="section-title">Students around you</h2>
-<div class="white-box looking-for-room">
+<!--<input class="pull-right" type="range" name="points" min="1" max="5" step="1" style="position: relative; width: 200px;"/>-->
+<div class="white-box">
   <h2 ng-if="!dashboard.aroundYou.length">
     There is no students around you right now
-    <!--<small>-->
-      <!--<a ui-sref="addNewLooking"><br/>Click here</a> to add looking.-->
-    <!--</small>-->
   </h2>
-  <slick dots="true" class="slider row" slides-to-show="2" slides-to-scroll="2" responsive="dashboard.breakpoints.aroundYou" init-onload="true" infinite="false" data="dashboard.aroundYou" ng-if="dashboard.aroundYou.length">
-    <!-- start aroundYou box -->
+  <slick dots="true" class="slider row" slides-to-show="4" slides-to-scroll="4" responsive="dashboard.breakpoints.aroundYou" init-onload="true" infinite="false" data="dashboard.aroundYou" ng-if="dashboard.aroundYou.length">
 
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 room" ng-repeat="around in dashboard.aroundYou track by $index">
-      <!--<a style="text-decoration: none" ui-sref="lookingDetail({id:looking.id})">-->
-        <div  class="media">
-          <div class="media-left">
-            <img ng-if="around.profileImage" ng-src="api/images{{around.profileImage}}" class="img-circle" height="100px" width="100px">
-            <i ng-if="!around.profileImage" class="fa fa-user fa-5x"></i>
-          </div>
-          <div class="media-body" style="height: 0;">
-            <h4 class="media-heading user-name">
-              {{around.firstname}} {{around.lastname[0]}}.
-              <!--{{around.usereducationUsers[0].educationCenterName}}-->
-              <!--{{around.usereducationUsers[0].graduationDate | date:'yyyy'}}-->
+              <img ng-if="around.profileImage" ng-src="api/images{{around.profileImage}}" class="img-circle center-image" height="80px" width="80px" style="margin-top:0">
+              <i ng-if="!around.profileImage" class="fa fa-user fa-5x" style="text-align: center; display: inline-block;width: 100%;"></i>
+          <div class="">
+            <h4 class="media-heading user-name" style="text-align: center">
+              {{around.firstname}} {{around.lastname[0] | uppercase}}.
             </h4>
-            <div style="font-size: 0.8em;">
+            <div style="font-size: 0.6em; text-align: center">
               <dl>
-                <dt>University/College:&nbsp;&nbsp;</dt>
                 <dd ng-show="around.usereducationUsers[0].educationCenterName">{{around.usereducationUsers[0].educationCenterName}}</dd>
                 <dd ng-hide="around.usereducationUsers[0].educationCenterName">No university entered</dd>
 
-                <dt>Graduation Year:&nbsp;&nbsp;</dt>
-                <dd ng-show="around.usereducationUsers[0].graduationDate">{{around.usereducationUsers[0].graduationDate | date:'yyyy'}}</dd>
-                <dd ng-hide="around.usereducationUsers[0].graduationDate">N/A</dd>
+                <dd ng-show="around.usereducationUsers[0].graduationDate">Graduation: {{around.usereducationUsers[0].graduationDate | date:'yyyy'}}</dd>
+                <dd ng-hide="around.usereducationUsers[0].graduationDate">Graduation: N/A</dd>
               </dl>
             </div>
           </div>
-          <p ng-show="around.aboutMe" class="quote text-container-aroundYou">{{around.aboutMe}}</p>
-          <p ng-hide="around.aboutMe" class="quote text-container-aroundYou">No description available</p>
-          <hr/>
+      <div style="text-align: center; display: inline-block;width: 100%;">
           <a ng-href="{{around.facebook}}" ng-if="around.facebook" target="_blank"><i class="fa fa-facebook-square fa-2x facebookAroundYou"></i></a>
           <a ng-href="mailto:{{around.email}}?Subject=Hello" target="_top"><i class="fa fa-envelope fa-2x"></i></a>
-        </div>
-      <!--</a>-->
+      </div>
     </div>
-    <!-- end around box -->
   </slick>
   <hr>
-  <!--<a class="pull-right btn-rented-event view-all" ui-sref="looking">View All</a>-->
 </div>
