--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -30,4 +30,6 @@
     </div>
   </slick>
   <hr>
+  <a class="pull-right btn-rented-event view-all" ui-sref="aroundYou">View All</a>
+  <hr>
 </div>
