--- a/client/index.html
+++ b/client/index.html
@@ -114,6 +114,8 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/aroundYou/around.you.controller.js"></script>
+          <script src="app/aroundYou/around.you.route.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/looking/looking-details/looking.detail.controller.js"></script>
           <script src="app/dashboard/looking/looking-details/looking.detail.route.js"></script>
