--- a/client/app/dashboard/my-profile/edit-looking/edit.looking.html
+++ b/client/app/dashboard/my-profile/edit-looking/edit.looking.html
@@ -23,9 +23,10 @@
           <div class="col-xs-9 col-sm-7 input-post">
             <label for="utilitiesIncluded">Your campus</label><br/>
             <!-- TODO bind data to user university -->
-            <select
-              ng-options="option.value as option.text for option in editLooking.ddlYesNoSelect"
-              id="utilitiesIncluded" class="form-control" ng-model="editLooking.tempLooking.utilitiesIncluded">
+            <select id="educationCenterName" class="form-control" required name="universityName"
+                    data-ng-model="editLooking.education.educationCenterName"
+                    data-ng-options="university as university.name for university in editLooking.universitiesList"
+                    ng-init="editLooking.education.educationCenterName=editLooking.universitiesList[editLooking.education.universityId-1]">
             </select>
           </div>
         </div>
