updating around you grid

--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -5,7 +5,7 @@
     There is no students around you right now
   </h3>
   <h3 ng-if="!dashboard.education.id">
-    Please <a ui-sref="editProfile">update</a> your university to view students around you.
+    Please <a ui-sref="editProfile">update</a> your current address to view students around you.
   </h3>
   <slick dots="true" class="slider row" slides-to-show="4" slides-to-scroll="4" responsive="dashboard.breakpoints.aroundYou" init-onload="true" infinite="false" data="dashboard.aroundYou" ng-if="dashboard.aroundYou.length">
 
