--- a/client/app/aroundYou/around.you.html
+++ b/client/app/aroundYou/around.you.html
@@ -23,13 +23,13 @@
                     <div class="front white-box">
                       <div class="center-image">
                         <img ng-if="arYou.profileImage" ng-src="api/images{{arYou.profileImage}}" class="img-circle center-block looking-grid-profile-img">
-                        <i ng-if="!arYou.profileImage" class="fa fa-user fa-4x"></i>
+                        <i ng-if="!arYou.profileImage" class="fa fa-user fa-4x" style="text-align: center; display: inline-block;width: 100%;"></i>
                       </div>
                       <div class="">
-                        <h4 class="media-heading user-name" style="text-align: center">
+                        <h4 class="media-heading user-name" style="text-align: center; padding: 20px">
                           {{arYou.firstname}} {{arYou.lastname[0] | uppercase}}.
                         </h4>
-                        <div style="font-size: 0.6em; text-align: center">
+                        <div style="font-size: 0.9em; text-align: center">
                           <dl>
                             <dd ng-show="arYou.usereducationUsers[0].educationCenterName">{{arYou.usereducationUsers[0].educationCenterName}}</dd>
                             <dd ng-hide="arYou.usereducationUsers[0].educationCenterName">No university entered</dd>
@@ -38,11 +38,12 @@
                             <dd ng-hide="arYou.usereducationUsers[0].graduationDate">Graduation: N/A</dd>
                           </dl>
                         </div>
+                        <div style="text-align: center; display: inline-block;width: 100%;">
+                          <a ng-href="{{arYou.facebook}}" ng-if="arYou.facebook" target="_blank"><i class="fa fa-facebook-square fa-2x facebookAroundYou"></i></a>
+                          <a ng-href="mailto:{{arYou.email}}?Subject=Hello"><i class="fa fa-envelope fa-2x"></i></a>
+                        </div>
                       </div>
 
-                    </div>
-                    <div class="back">
-                      <a ui-sref="roomDetail({id: room.roomDetails.id})"> <h2>View Detail</h2> </a>
                     </div>
               </div>
             </div>
