--- a/client/app/dashboard/looking/looking.html
+++ b/client/app/dashboard/looking/looking.html
@@ -35,8 +35,8 @@
             </select>
           </div>
           <div class="col-xs-12 col-sm-5 col-md-4 col-lg-4">
-            <input type="radio" name="sortOrder" value="ascending" ng-model="looking.sortOrder">&nbsp;<i class="fa fa-arrow-up"></i></input>
-            <input type="radio" name="sortOrder" value="descending" ng-model="looking.sortOrder">&nbsp;<i class="fa fa-arrow-down"></i></input>
+            <input type="radio" name="sortOrder" value="ascending" ng-model="looking.sortOrder"/>&nbsp;<i class="fa fa-arrow-up"></i>
+            <input type="radio" name="sortOrder" value="descending" ng-model="looking.sortOrder"/>&nbsp;<i class="fa fa-arrow-down"></i>
             <button class="btn-rented-small primary" id="sort" name="sort" ng-click="looking.search(false)">Sort</button>
           </div>
         </div>
