adding address instead of univ

--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -1,10 +1,10 @@
 <h2 class="section-title">Students Around You</h2>
 <!--<input class="pull-right" type="range" name="points" min="1" max="5" step="1" style="position: relative; width: 200px;"/>-->
 <div class="white-box">
-  <h3 ng-if="!dashboard.aroundYou.length && dashboard.education.id">
+  <h3 ng-if="!dashboard.aroundYou.length && dashboard.address.streetAddress.id">
     There is no students around you right now
   </h3>
-  <h3 ng-if="!dashboard.education.id">
+  <h3 ng-if="!dashboard.address.streetAddress.id">
     Please <a ui-sref="editProfile">update</a> your current address to view students around you.
   </h3>
   <slick dots="true" class="slider row" slides-to-show="4" slides-to-scroll="4" responsive="dashboard.breakpoints.aroundYou" init-onload="true" infinite="false" data="dashboard.aroundYou" ng-if="dashboard.aroundYou.length">
