--- a/client/app/aroundYou/around.you.html
+++ b/client/app/aroundYou/around.you.html
@@ -8,7 +8,7 @@
 
       <div class="row">
         <div class="page-header col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <h2>Students around you</h2>
+          <h2>Students Around You <small>(within 1 mile)</small></h2>
         </div>
       </div>
 
