--- a/client/app/dashboard/looking/looking-details/looking.info.section.html
+++ b/client/app/dashboard/looking/looking-details/looking.info.section.html
@@ -2,7 +2,7 @@
 
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 white-box">
 
-  <div class="row">
+  <div class="row" ng-if="detail.lookingDetail.area">
     <div class="col-xs-11 col-sm-11 col-xs-offset-1 col-sm-offset-1">
       <dl>
         <dt>Details</dt>
