--- a/client/app/dashboard/looking/searchCriteria.html
+++ b/client/app/dashboard/looking/searchCriteria.html
@@ -16,8 +16,8 @@
         <div class="col-xs-9 col-sm-7 input-post">
           <label for="searchByCampus">Search by campus</label><br/>
           <select id="searchByCampus" class="form-control" required name="searchByCampus"
-                  data-ng-model="looking.univCriteria.name"
-                  data-ng-options="university as university.name for university in looking.universitiesList">
+                  data-ng-model="looking.univCriteria.shortName"
+                  data-ng-options="university as university.shortName for university in looking.universitiesList">
           </select>
         </div>
       </div>
