--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -56,7 +56,7 @@
             <div ng-repeat="group in rooms.groups" class="row">
               <!--ng-if="room.roomDetails.creatorId!==rooms.me.id" to not show own user room listings-->
               <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 room" ng-repeat="room in group">
-                <div class="flip-container-room" ontouchstart="this.classList.toggle('hover');">
+                <div class="flip-container-room">
                   <div class="flipper">
                     <div class="front white-box">
                       <div class="picture safariFix">
